--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+	[0.9.6]
+	decode function refactored to work with read groups instead of individual read records
+
 	[0.9.5]
 	Implemented 'bambi read2tags' for extracting sequence and quality ranges from reads and assigning them to auxiliary tags
 
