update ChangeLog for release 0.9.8

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+	[0.9.8]
+	Bug fix: chrsplit function now adds PG lines to output BAM/CRAM header
+
 	[0.9.7]
 	Bug fix: remove old RG lines before adding new ones (decode)
 	Handle separators in tag indexes
