--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+	[0.9.8]
+	Bug fix: Handle empty BAM files (bamit)
+
 	[0.9.7]
 	Bug fix: remove old RG lines before adding new ones (decode)
 	Handle separators in tag indexes
