update ChangeLog for release 0.9.11

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+	[0.9.11]
+	Bug fix: decode assigned different read groups to reads in a pair with low quality when --convert-low-quality flag was used
+
 	[0.9.10]
 	Bug fix: decode memory leak fix
 
