--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+	[0.9.12]
+	Bug fix: removed overstringent assertion in select
+	i2b - now handles NovaSeq data
+
 	[0.9.11]
 	Bug fix: decode assigned different read groups to reads in a pair with low quality when --convert-low-quality flag was used
 
