--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+    [0.9.13]
+    Implemented spatial_filter command
+    Dual index handling (including tag-hopping report] in decode
+    i2b now has multithreading
+
+    [0.9.12]
+    Bug fix: removed overstringent assertion in select
+    enhancement: i2b now handles NovaSeq data
+
 	[0.9.11]
 	Bug fix: decode assigned different read groups to reads in a pair with low quality when --convert-low-quality flag was used
 
