--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+	[0.10.1]
+	tag hops metrics file - unneeded columns removed; always create this file if dual index is detected (will only contain header values)
+
 	[0.10.0]
 	Implemented spatial_filter command
 	Dual index handling (including tag-hopping report) in decode
