--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+    [0.16.0]
+    Fixed bug in read_names caused by overflow of 'float' by changing to 'double'
+    Added --nocall-quality option for NovaSeqX
+    Added Acknowledgements file to credit Illumina for test data
+
 	[0.15.0]
 	Initial NovaSeqX support
 	Fixed memory leak in check_bcl
